[gd_scene load_steps=12 format=3 uid="uid://pdbqmfai7ilx"]

[ext_resource type="Script" path="res://scean/editeur/editeur_text.gd" id="1_enrew"]
[ext_resource type="FontFile" uid="uid://b3rxuuttd34fr" path="res://assets/font/MPLUSRounded1c-Medium.ttf" id="2_qkb22"]
[ext_resource type="Script" path="res://scean/editeur/TextEdit.gd" id="3_dib2g"]
[ext_resource type="FontFile" uid="uid://bfvteydddtjug" path="res://assets/font/Roboto-Medium.ttf" id="4_r0mel"]
[ext_resource type="PackedScene" uid="uid://cmymqbejqbmto" path="res://scean/console/console_container.tscn" id="5_d852s"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_lnlwa"]
number_color = Color(0.466667, 0.721569, 0.643137, 1)
symbol_color = Color(0.298039, 0.423529, 0.501961, 1)
member_variable_color = Color(0.180392, 0.654902, 0.505882, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jkyq8"]
grow_begin = 0.0
grow_end = 0.0
thickness = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grk3q"]
bg_color = Color(0.227451, 0.227451, 0.227451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.509804, 0.509804, 0.509804, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 10.0
expand_margin_top = 4.0
expand_margin_right = 10.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8glvm"]
bg_color = Color(0.364706, 0.364706, 0.364706, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.509804, 0.509804, 0.509804, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 10.0
expand_margin_top = 4.0
expand_margin_right = 10.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtbda"]
bg_color = Color(0.709804, 0.709804, 0.709804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25098, 0.25098, 0.25098, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 10.0
expand_margin_top = 4.0
expand_margin_right = 10.0
expand_margin_bottom = 4.0

[sub_resource type="Theme" id="Theme_ois0b"]
Button/colors/font_pressed_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
Button/fonts/font = ExtResource("4_r0mel")
Button/styles/focus = SubResource("StyleBoxLine_jkyq8")
Button/styles/hover = SubResource("StyleBoxFlat_grk3q")
Button/styles/normal = SubResource("StyleBoxFlat_8glvm")
Button/styles/pressed = SubResource("StyleBoxFlat_qtbda")

[node name="editeur_text" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_enrew")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0156863, 0.0196078, 0.0588235, 1)

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 35.0
offset_right = -2.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("2_qkb22")
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
syntax_highlighter = SubResource("CodeHighlighter_lnlwa")
scroll_smooth = true
scroll_v_scroll_speed = 70.0
caret_blink = true
script = ExtResource("3_dib2g")

[node name="title bar" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.049
offset_bottom = -0.752001
grow_horizontal = 2

[node name="ColorRect" type="ColorRect" parent="title bar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.968
offset_bottom = -0.00799942
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[node name="MenuBar" type="MenuBar" parent="title bar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.968
offset_left = 8.0
offset_right = -810.0
offset_bottom = -0.00799942
grow_horizontal = 2
mouse_filter = 1
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="title bar/MenuBar"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0322581
anchor_right = 0.497006
anchor_bottom = 0.967742
offset_top = 1.0
offset_right = 95.0
offset_bottom = 1.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MenuButton" type="MenuButton" parent="title bar/MenuBar/HBoxContainer"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
text = "File"
switch_on_hover = true
item_count = 5
popup/item_0/text = "New File"
popup/item_0/id = 0
popup/item_1/text = "load file"
popup/item_1/id = 1
popup/item_2/text = "save file"
popup/item_2/id = 2
popup/item_3/text = "save as file"
popup/item_3/id = 3
popup/item_4/text = "Quit"
popup/item_4/id = 4

[node name="MenuButtonAnalyse" type="MenuButton" parent="title bar/MenuBar/HBoxContainer"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
text = "Compile"
switch_on_hover = true
item_count = 3
popup/item_0/text = "analyse lexical"
popup/item_0/id = 0
popup/item_1/text = "analyse syntaxic"
popup/item_1/id = 1
popup/item_2/text = "analyse semantique"
popup/item_2/id = 2

[node name="title" type="Label" parent="title bar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_right = 23.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.776471, 0.776471, 0.776471, 1)
text = "snake"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpenFileWindow" type="FileDialog" parent="."]
initial_position = 1
title = "Open a File"
size = Vector2i(600, 400)
transient = false
unresizable = true
ok_button_text = "Ouvrir"
cancel_button_text = "Anuller"
file_mode = 0
access = 2
filters = PackedStringArray(".snk")

[node name="SaveFileWindow" type="FileDialog" parent="."]
initial_position = 1
size = Vector2i(600, 400)
transient = false
unresizable = true
transparent = true
ok_button_text = "Enregistrer"
cancel_button_text = "Anuller"
access = 2
filters = PackedStringArray("..snk")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Warning!!"
size = Vector2i(290, 99)
transient = false
unresizable = true
always_on_top = true
popup_window = true
min_size = Vector2i(250, 70)
theme = SubResource("Theme_ois0b")
ok_button_text = "Yes"
dialog_text = "Do u want to close the file 
without  saving"
dialog_autowrap = true
cancel_button_text = "No"

[node name="Console" type="Window" parent="."]
title = "Console"
size = Vector2i(500, 500)
visible = false
unresizable = true
always_on_top = true

[node name="Control" parent="Console" instance=ExtResource("5_d852s")]

[connection signal="text_changed" from="TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="file_selected" from="OpenFileWindow" to="." method="_on_open_file_window_file_selected"]
[connection signal="file_selected" from="SaveFileWindow" to="." method="_on_save_file_window_file_selected"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="about_to_popup" from="Console" to="Console/Control" method="_on_console_about_to_popup"]
[connection signal="close_requested" from="Console" to="." method="_on_console_close_requested"]
[connection signal="window_input" from="Console" to="." method="_on_console_window_input"]
